<resources>
    <string name="app_name">My code</string>
    <string name="Heading">Heading</string>
    <string name="name">Name</string>
    <string name="college">College</string>
    <string name="Contact">Contact</string>
    <string name="Email">Email</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="StudyField">StudyField</string>
    <string name="SAVE">SAVE</string>
    <string name="Are_yoy_studying">Are you studying</string>
    <string name="enter_your_field">Enter your field</string>
    <string name="Are_you_studying">Are you studying</string>
    <string name="Enter_your_contact_no">Enter your contact no</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_college">enter your college</string>
    <string name="enter_your_email">enter your email</string>
    <string name="hello">HEllO</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="next">Next</string>

</resources>